# snippet-lessons

./: README.md
celery/: README.md  docker-compose.yml  pyproject.toml  server.py  worker.py
