[tool.poetry]
name = "celery-lab"
version = "0.1.0"
description = ""
authors = ["Dam Tien Long <longdt.vn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
celery = {version = "^4.4.2", extras = ["redis"]}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

